--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Kids 24" bikes
-email: your-email@example.com
+# title: Kids 24" bikes
+# email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Python and R scripts for comparing kids bikes.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -24,8 +24,8 @@ github_username:  jeb2112
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-slate
-plugins:
-  - jekyll-feed
+# plugins:
+#   - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
