--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,11 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 # title: Kids 24" bikes
 # email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Python and R scripts for comparing kids bikes.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jeb2112.github.io/kids-24-bikes" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  jeb2112
+# description: >- # this means to ignore newlines until "baseurl:"
+#   Python and R scripts for comparing kids bikes.
+# baseurl: "" # the subpath of your site, e.g. /blog
+# url: "https://jeb2112.github.io/kids-24-bikes" # the base hostname & protocol for your site, e.g. http://example.com
+# github_username:  jeb2112
 
 # Build settings
 # markdown: kramdown
