--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-# title: Kids 24" bikes
+title: Kids 24" bikes
 # email: your-email@example.com
 # description: >- # this means to ignore newlines until "baseurl:"
 #   Python and R scripts for comparing kids bikes.
