--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,11 +22,12 @@ description: >- # this means to ignore newlines until "baseurl:"
 # github_username:  jeb2112
 
 # Build settings
+google_analytics: UA-76971449-2
 markdown: kramdown
 theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
-  - jekyll-seo-tag
+#  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
