--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         "request": "launch",
         "pythonPath": "/usr/share/miniconda2/envs/mypy2/bin/python",
         "program": "${file}",
-        "args": ["/home/jbishop/Pictures/zulu.png","1.4"],
+        "args": ["-i","/home/jbishop/Pictures/alite.png","--mmpx","1.65"],
+        "args2": ["-f","/home/jbishop/src/python/geo/images.txt"],
         "cwd": "${workspaceRoot}",
         "debugOptions": [
             "BreakOnSystemExitZero",
