--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,8 +17,8 @@ title: Kids 24" bikes
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Python and R scripts for comparing kids bikes.
-# baseurl: "" # the subpath of your site, e.g. /blog
-# url: "https://jeb2112.github.io/kids-24-bikes" # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: /kids-24-bikes # the subpath of your site, e.g. /blog
+url: "https://jeb2112.github.io/kids-24-bikes" # the base hostname & protocol for your site, e.g. http://example.com
 # github_username:  jeb2112
 
 # Build settings
