--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "name": "Python",
         "type": "python",
         "request": "launch",
-        "pythonPath": "/usr/share/miniconda2/envs/mypy2/bin/python",
+        "python": "/usr/share/miniconda2/envs/mypy2/bin/python",
         "program": "${file}",
         "args": ["-i","/home/jbishop/src/python/geo/png/alite.png","--mmpx","1.65"],
         "args2": ["-f","/home/jbishop/src/python/geo/images.txt"],
