--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/share/miniconda2/envs/mypy2/bin/python"
+    "python.pythonPath": "/home/jbishop/.conda/envs/py38g/bin/python"
 }
