--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,18 @@
             "cwd": "${workspaceRoot}",
             "justMyCode": false,
             "console": "integratedTerminal"
-            },
-        ],
+        },
+        {
+            "name": "demo",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceRoot}/demo.py",
+            "args": ["-f","/home/src/kids-24-bikes/images.txt",
+                    "--annotate"],
+            "cwd": "${workspaceRoot}",
+            "justMyCode": false,
+            "console": "integratedTerminal"
+        },        
+    ],
     "compounds": []
 }
